fix else issue. Update CSS.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,33 @@
+h1 {
+  text-align: center;
+  text-decoration: underline;
+  font-weight: bold;
+}
+
 .btn-dark {
-  display: block;
+  margin: 2%;
 }
 
-#equilateral, #isosceles, #scalene, #not-triangle {
+#equilateral, #isosceles, #scalene, #not-triangle, #invalid {
   display: none;
+  text-align: center;
 }
 
-.invalid-feedback {
-  display: none;
+p {
+  font-size: xx-large;
+  font-weight: bold;
+  margin-top: 5%;
+}
+
+label {
+  font-size: x-large;
+  font-weight: bold;
+}
+
+input {
+  margin: 1%;
+}
+
+body {
+  background-image: url("https://cdn4.vectorstock.com/i/1000x1000/94/63/multicolored-triangles-seamless-background-pattern-vector-919463.jpg");
 }
